# genai_masterclass

./: .gitignore  README.md  pyproject.toml
outputs/: course_outline.md
outputs/activities/: interactive_activities.md
outputs/content/: fundamentals.md
outputs/exercises/: practical_exercises.md
outputs/materials/: presentation_content.md
src/genai_masterclass/: crew.py  main.py
src/genai_masterclass/config/: agents.yaml  masterclass_concept.yaml  tasks.yaml
