[project]
name = "genai_masterclass"
version = "0.1.0"
description = "genai_masterclass using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
genai_masterclass = "genai_masterclass.main:run"
run_crew = "genai_masterclass.main:run"
train = "genai_masterclass.main:train"
replay = "genai_masterclass.main:replay"
test = "genai_masterclass.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
